ocaml-3.10.2-patched_x86_64/lex/parser.output
   0  $accept : %entry% $end

   1  lexer_definition : header named_regexps Trule definition other_definitions header Tend

   2  header : Taction
   3         |

   4  named_regexps : named_regexps Tlet Tident Tequal regexp
   5                |

   6  other_definitions : other_definitions Tand definition
   7                    |

   8  definition : Tident arguments Tequal Tparse entry
   9             | Tident arguments Tequal Tparse_shortest entry

  10  arguments : Tident arguments
  11            |

  12  entry : case rest_of_entry
  13        | Tor case rest_of_entry

  14  rest_of_entry : rest_of_entry Tor case
  15                |

  16  case : regexp Taction

  17  regexp : Tunderscore
  18         | Teof
  19         | Tchar
  20         | Tstring
  21         | Tlbracket char_class Trbracket
  22         | regexp Tstar
  23         | regexp Tmaybe
  24         | regexp Tplus
  25         | regexp Tsharp regexp
  26         | regexp Tor regexp
  27         | regexp regexp
  28         | Tlparen regexp Trparen
  29         | Tident
  30         | regexp Tas ident

  31  ident : Tident

  32  char_class : Tcaret char_class1
  33             | char_class1

  34  char_class1 : Tchar Tdash Tchar
  35              | Tchar
  36              | char_class1 char_class1

  37  %entry% : '\001' lexer_definition

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . lexer_definition  (37)
	header : .  (3)

	Taction  shift 3
	Trule  reduce 3
	Tlet  reduce 3

	lexer_definition  goto 4
	header  goto 5


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	header : Taction .  (2)

	.  reduce 2


state 4
	%entry% : '\001' lexer_definition .  (37)

	.  reduce 37


state 5
	lexer_definition : header . named_regexps Trule definition other_definitions header Tend  (1)
	named_regexps : .  (5)

	.  reduce 5

	named_regexps  goto 6


state 6
	lexer_definition : header named_regexps . Trule definition other_definitions header Tend  (1)
	named_regexps : named_regexps . Tlet Tident Tequal regexp  (4)

	Trule  shift 7
	Tlet  shift 8
	.  error


state 7
	lexer_definition : header named_regexps Trule . definition other_definitions header Tend  (1)

	Tident  shift 9
	.  error

	definition  goto 10


state 8
	named_regexps : named_regexps Tlet . Tident Tequal regexp  (4)

	Tident  shift 11
	.  error


state 9
	definition : Tident . arguments Tequal Tparse entry  (8)
	definition : Tident . arguments Tequal Tparse_shortest entry  (9)
	arguments : .  (11)

	Tident  shift 12
	Tequal  reduce 11

	arguments  goto 13


state 10
	lexer_definition : header named_regexps Trule definition . other_definitions header Tend  (1)
	other_definitions : .  (7)

	.  reduce 7

	other_definitions  goto 14


state 11
	named_regexps : named_regexps Tlet Tident . Tequal regexp  (4)

	Tequal  shift 15
	.  error


state 12
	arguments : Tident . arguments  (10)
	arguments : .  (11)

	Tident  shift 12
	Tequal  reduce 11

	arguments  goto 16


state 13
	definition : Tident arguments . Tequal Tparse entry  (8)
	definition : Tident arguments . Tequal Tparse_shortest entry  (9)

	Tequal  shift 17
	.  error


state 14
	lexer_definition : header named_regexps Trule definition other_definitions . header Tend  (1)
	other_definitions : other_definitions . Tand definition  (6)
	header : .  (3)

	Taction  shift 3
	Tand  shift 18
	Tend  reduce 3

	header  goto 19


state 15
	named_regexps : named_regexps Tlet Tident Tequal . regexp  (4)

	Tident  shift 20
	Tchar  shift 21
	Tstring  shift 22
	Tunderscore  shift 23
	Teof  shift 24
	Tlbracket  shift 25
	Tlparen  shift 26
	.  error

	regexp  goto 27


state 16
	arguments : Tident arguments .  (10)

	.  reduce 10


state 17
	definition : Tident arguments Tequal . Tparse entry  (8)
	definition : Tident arguments Tequal . Tparse_shortest entry  (9)

	Tparse  shift 28
	Tparse_shortest  shift 29
	.  error


state 18
	other_definitions : other_definitions Tand . definition  (6)

	Tident  shift 9
	.  error

	definition  goto 30


state 19
	lexer_definition : header named_regexps Trule definition other_definitions header . Tend  (1)

	Tend  shift 31
	.  error


state 20
	regexp : Tident .  (29)

	.  reduce 29


state 21
	regexp : Tchar .  (19)

	.  reduce 19


state 22
	regexp : Tstring .  (20)

	.  reduce 20


state 23
	regexp : Tunderscore .  (17)

	.  reduce 17


state 24
	regexp : Teof .  (18)

	.  reduce 18


state 25
	regexp : Tlbracket . char_class Trbracket  (21)

	Tchar  shift 32
	Tcaret  shift 33
	.  error

	char_class  goto 34
	char_class1  goto 35


state 26
	regexp : Tlparen . regexp Trparen  (28)

	Tident  shift 20
	Tchar  shift 21
	Tstring  shift 22
	Tunderscore  shift 23
	Teof  shift 24
	Tlbracket  shift 25
	Tlparen  shift 26
	.  error

	regexp  goto 36


state 27
	named_regexps : named_regexps Tlet Tident Tequal regexp .  (4)
	regexp : regexp . Tstar  (22)
	regexp : regexp . Tmaybe  (23)
	regexp : regexp . Tplus  (24)
	regexp : regexp . Tsharp regexp  (25)
	regexp : regexp . Tor regexp  (26)
	regexp : regexp . regexp  (27)
	regexp : regexp . Tas ident  (30)

	Tident  shift 20
	Tchar  shift 21
	Tstring  shift 22
	Tor  shift 37
	Tunderscore  shift 23
	Teof  shift 24
	Tlbracket  shift 25
	Tstar  shift 38
	Tmaybe  shift 39
	Tplus  shift 40
	Tlparen  shift 26
	Tas  shift 41
	Tsharp  shift 42
	Trule  reduce 4
	Tlet  reduce 4

	regexp  goto 43


state 28
	definition : Tident arguments Tequal Tparse . entry  (8)

	Tident  shift 20
	Tchar  shift 21
	Tstring  shift 22
	Tor  shift 44
	Tunderscore  shift 23
	Teof  shift 24
	Tlbracket  shift 25
	Tlparen  shift 26
	.  error

	regexp  goto 45
	entry  goto 46
	case  goto 47


state 29
	definition : Tident arguments Tequal Tparse_shortest . entry  (9)

	Tident  shift 20
	Tchar  shift 21
	Tstring  shift 22
	Tor  shift 44
	Tunderscore  shift 23
	Teof  shift 24
	Tlbracket  shift 25
	Tlparen  shift 26
	.  error

	regexp  goto 45
	entry  goto 48
	case  goto 47


state 30
	other_definitions : other_definitions Tand definition .  (6)

	.  reduce 6


state 31
	lexer_definition : header named_regexps Trule definition other_definitions header Tend .  (1)

	.  reduce 1


state 32
	char_class1 : Tchar . Tdash Tchar  (34)
	char_class1 : Tchar .  (35)

	Tdash  shift 49
	Tchar  reduce 35
	Trbracket  reduce 35


state 33
	char_class : Tcaret . char_class1  (32)

	Tchar  shift 32
	.  error

	char_class1  goto 50


state 34
	regexp : Tlbracket char_class . Trbracket  (21)

	Trbracket  shift 51
	.  error


state 35
	char_class : char_class1 .  (33)
	char_class1 : char_class1 . char_class1  (36)

	Tchar  shift 32
	Trbracket  reduce 33

	char_class1  goto 52


state 36
	regexp : regexp . Tstar  (22)
	regexp : regexp . Tmaybe  (23)
	regexp : regexp . Tplus  (24)
	regexp : regexp . Tsharp regexp  (25)
	regexp : regexp . Tor regexp  (26)
	regexp : regexp . regexp  (27)
	regexp : Tlparen regexp . Trparen  (28)
	regexp : regexp . Tas ident  (30)

	Tident  shift 20
	Tchar  shift 21
	Tstring  shift 22
	Tor  shift 37
	Tunderscore  shift 23
	Teof  shift 24
	Tlbracket  shift 25
	Tstar  shift 38
	Tmaybe  shift 39
	Tplus  shift 40
	Tlparen  shift 26
	Trparen  shift 53
	Tas  shift 41
	Tsharp  shift 42
	.  error

	regexp  goto 43


state 37
	regexp : regexp Tor . regexp  (26)

	Tident  shift 20
	Tchar  shift 21
	Tstring  shift 22
	Tunderscore  shift 23
	Teof  shift 24
	Tlbracket  shift 25
	Tlparen  shift 26
	.  error

	regexp  goto 54


state 38
	regexp : regexp Tstar .  (22)

	.  reduce 22


state 39
	regexp : regexp Tmaybe .  (23)

	.  reduce 23


state 40
	regexp : regexp Tplus .  (24)

	.  reduce 24


state 41
	regexp : regexp Tas . ident  (30)

	Tident  shift 55
	.  error

	ident  goto 56


state 42
	regexp : regexp Tsharp . regexp  (25)

	Tident  shift 20
	Tchar  shift 21
	Tstring  shift 22
	Tunderscore  shift 23
	Teof  shift 24
	Tlbracket  shift 25
	Tlparen  shift 26
	.  error

	regexp  goto 57


state 43
	regexp : regexp . Tstar  (22)
	regexp : regexp . Tmaybe  (23)
	regexp : regexp . Tplus  (24)
	regexp : regexp . Tsharp regexp  (25)
	regexp : regexp . Tor regexp  (26)
	regexp : regexp . regexp  (27)
	regexp : regexp regexp .  (27)
	regexp : regexp . Tas ident  (30)

	Tident  shift 20
	Tchar  shift 21
	Tstring  shift 22
	Tunderscore  shift 23
	Teof  shift 24
	Tlbracket  shift 25
	Tstar  shift 38
	Tmaybe  shift 39
	Tplus  shift 40
	Tlparen  shift 26
	Taction  reduce 27
	Trule  reduce 27
	Tor  reduce 27
	Trparen  reduce 27
	Tlet  reduce 27
	Tas  reduce 27
	Tsharp  reduce 27

	regexp  goto 43


state 44
	entry : Tor . case rest_of_entry  (13)

	Tident  shift 20
	Tchar  shift 21
	Tstring  shift 22
	Tunderscore  shift 23
	Teof  shift 24
	Tlbracket  shift 25
	Tlparen  shift 26
	.  error

	regexp  goto 45
	case  goto 58


state 45
	case : regexp . Taction  (16)
	regexp : regexp . Tstar  (22)
	regexp : regexp . Tmaybe  (23)
	regexp : regexp . Tplus  (24)
	regexp : regexp . Tsharp regexp  (25)
	regexp : regexp . Tor regexp  (26)
	regexp : regexp . regexp  (27)
	regexp : regexp . Tas ident  (30)

	Tident  shift 20
	Tchar  shift 21
	Tstring  shift 22
	Taction  shift 59
	Tor  shift 37
	Tunderscore  shift 23
	Teof  shift 24
	Tlbracket  shift 25
	Tstar  shift 38
	Tmaybe  shift 39
	Tplus  shift 40
	Tlparen  shift 26
	Tas  shift 41
	Tsharp  shift 42
	.  error

	regexp  goto 43


state 46
	definition : Tident arguments Tequal Tparse entry .  (8)

	.  reduce 8


state 47
	entry : case . rest_of_entry  (12)
	rest_of_entry : .  (15)

	.  reduce 15

	rest_of_entry  goto 60


state 48
	definition : Tident arguments Tequal Tparse_shortest entry .  (9)

	.  reduce 9


state 49
	char_class1 : Tchar Tdash . Tchar  (34)

	Tchar  shift 61
	.  error


state 50
	char_class : Tcaret char_class1 .  (32)
	char_class1 : char_class1 . char_class1  (36)

	Tchar  shift 32
	Trbracket  reduce 32

	char_class1  goto 52


state 51
	regexp : Tlbracket char_class Trbracket .  (21)

	.  reduce 21


state 52
	char_class1 : char_class1 . char_class1  (36)
	char_class1 : char_class1 char_class1 .  (36)

	Tchar  shift 32
	Trbracket  reduce 36

	char_class1  goto 52


state 53
	regexp : Tlparen regexp Trparen .  (28)

	.  reduce 28


state 54
	regexp : regexp . Tstar  (22)
	regexp : regexp . Tmaybe  (23)
	regexp : regexp . Tplus  (24)
	regexp : regexp . Tsharp regexp  (25)
	regexp : regexp . Tor regexp  (26)
	regexp : regexp Tor regexp .  (26)
	regexp : regexp . regexp  (27)
	regexp : regexp . Tas ident  (30)

	Tident  shift 20
	Tchar  shift 21
	Tstring  shift 22
	Tunderscore  shift 23
	Teof  shift 24
	Tlbracket  shift 25
	Tstar  shift 38
	Tmaybe  shift 39
	Tplus  shift 40
	Tlparen  shift 26
	Taction  reduce 26
	Trule  reduce 26
	Tor  reduce 26
	Trparen  reduce 26
	Tlet  reduce 26
	Tas  reduce 26
	Tsharp  reduce 26

	regexp  goto 43


state 55
	ident : Tident .  (31)

	.  reduce 31


state 56
	regexp : regexp Tas ident .  (30)

	.  reduce 30


state 57
	regexp : regexp . Tstar  (22)
	regexp : regexp . Tmaybe  (23)
	regexp : regexp . Tplus  (24)
	regexp : regexp . Tsharp regexp  (25)
	regexp : regexp Tsharp regexp .  (25)
	regexp : regexp . Tor regexp  (26)
	regexp : regexp . regexp  (27)
	regexp : regexp . Tas ident  (30)

	Tident  shift 20
	Tchar  shift 21
	Tstring  shift 22
	Tor  shift 37
	Tunderscore  shift 23
	Teof  shift 24
	Tlbracket  shift 25
	Tstar  shift 38
	Tmaybe  shift 39
	Tplus  shift 40
	Tlparen  shift 26
	Taction  reduce 25
	Trule  reduce 25
	Trparen  reduce 25
	Tlet  reduce 25
	Tas  reduce 25
	Tsharp  reduce 25

	regexp  goto 43


state 58
	entry : Tor case . rest_of_entry  (13)
	rest_of_entry : .  (15)

	.  reduce 15

	rest_of_entry  goto 62


state 59
	case : regexp Taction .  (16)

	.  reduce 16


state 60
	entry : case rest_of_entry .  (12)
	rest_of_entry : rest_of_entry . Tor case  (14)

	Tor  shift 63
	Taction  reduce 12
	Tand  reduce 12
	Tend  reduce 12


state 61
	char_class1 : Tchar Tdash Tchar .  (34)

	.  reduce 34


state 62
	entry : Tor case rest_of_entry .  (13)
	rest_of_entry : rest_of_entry . Tor case  (14)

	Tor  shift 63
	Taction  reduce 13
	Tand  reduce 13
	Tend  reduce 13


state 63
	rest_of_entry : rest_of_entry Tor . case  (14)

	Tident  shift 20
	Tchar  shift 21
	Tstring  shift 22
	Tunderscore  shift 23
	Teof  shift 24
	Tlbracket  shift 25
	Tlparen  shift 26
	.  error

	regexp  goto 45
	case  goto 64


state 64
	rest_of_entry : rest_of_entry Tor case .  (14)

	.  reduce 14


29 terminals, 15 nonterminals
38 grammar rules, 65 states
